kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: nginx
